# CPU_Scheduling

./: CMakeLists.txt
StartKit-Code/: driver.c  list.c  list.h  priority  rr  schedule_fcfs.c  schedule_priority.c  schedule_priority_rr.c  schedule_rr.c  schedule_sjf.c  sjf
